// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutputGenerator #buildAnnotations returns the expected array of annotations 1`] = `
Array [
  Object {
    "annotation_level": "warning",
    "end_line": 1,
    "message": "\\"So\\" adds no meaning",
    "path": "cats.md",
    "start_line": 1,
  },
  Object {
    "annotation_level": "warning",
    "end_line": 1,
    "message": "\\"was stolen\\" may be passive voice",
    "path": "cats.md",
    "start_line": 1,
  },
]
`;

exports[`OutputGenerator #buildSummary returns the expected string if there are suggestions 1`] = `"**2 suggestions** have been found in **1 file**."`;

exports[`OutputGenerator #buildWriteGoodResults returns the expected result 1`] = `
Map {
  "filename.md" => Array [],
  "anotherfile.md" => Array [],
  "cats.md" => Array [
    Object {
      "index": 0,
      "offset": 2,
      "reason": "\\"So\\" adds no meaning",
    },
    Object {
      "index": 11,
      "offset": 10,
      "reason": "\\"was stolen\\" may be passive voice",
    },
  ],
}
`;

exports[`OutputGenerator #generate generates the expected result 1`] = `
Object {
  "annotations": Array [
    Object {
      "annotation_level": "warning",
      "end_line": 1,
      "message": "\\"So\\" adds no meaning",
      "path": "cats.md",
      "start_line": 1,
    },
    Object {
      "annotation_level": "warning",
      "end_line": 1,
      "message": "\\"was stolen\\" may be passive voice",
      "path": "cats.md",
      "start_line": 1,
    },
  ],
  "summary": "**2 suggestions** have been found in **1 file**.",
  "title": "write-good-app",
}
`;

exports[`OutputGenerator #removeMarkdownFromFiles removes markdown from the files and returns the expected map 1`] = `
Map {
  "filename.md" => "This is some text",
  "anotherfile.md" => "this Has some Problems. it sure does jason?",
  "cats.md" => "So the cat was stolen.",
}
`;
